--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
   .flex-nav .appHome{
     color:white;
     font-weight:600;
-    font-size:20px;
+    font-size:18px;
     padding-right:45%;
   }
 
@@ -85,6 +85,7 @@ body {
   flex-direction:column;
   flex-wrap: wrap;
   width:65%;
+  /*border:1px solid black;*/
 }
 
 /* right side items*/
@@ -95,7 +96,7 @@ body {
   width:35%;
   padding-left:5px;
   padding-right:0;
-  border:1px solid black;
+  /*border:1px solid black;*/
 }
 
 .flex-right-container .flex-info-container{
@@ -106,7 +107,7 @@ body {
 
 .flex-info-container {
   display:flex;
-  border: 1px black solid;
+  /*border: 1px black solid;*/
 }
 
 .flex-ticker-container{
@@ -141,20 +142,72 @@ body {
   }
 
   /*table formatting-fix more*/
-
   table {
     border-collapse: collapse;
     border-spacing: 2px;
     table-layout: fixed;
     width: 100%;
     border-collapse: collapse;
-    text-align: center;
+    text-align: center; 
   }
   
   table, th, td {
     border: 1px solid black;
   }
 
+
+  @media(max-width: 768px){
+
+    /* nav bar */
+    .flex-nav{
+      display:flex;
+      flex-direction: row;
+      justify-content: space-around;
+      padding:20px;
+      background: black; 
+    }
+
+    .flex-nav .appHome{
+      color:white;
+      font-weight:600;
+      font-size:14px;
+      padding-right:30%;
+    }
+  
+    .flex-nav a{
+      color:white;
+      font-weight:300;
+      font-size:12px;
+      text-decoration: none;
+    }
+    
+    /* main container*/
+    .mainContainer{
+      display: flex;
+      flex-direction: column;
+      width:100%;
+    }
+
+    /* left side chart*/
+    .flex-left-container{
+      display:flex;
+      flex-direction:column;
+      width:100%;
+      
+      /*border:1px solid black;*/
+
+    }
+
+    /* right side items*/
+    .flex-right-container{
+      display:flex;
+      flex-direction:column;
+      width:100%;
+      padding-top: 25px;
+      /*border:1px solid black;*/
+}
+
+    }
 
 
 
